--- a/box.css
+++ b/box.css
@@ -1,14 +1,30 @@
 html{
-    background-color: rgb(255, 254, 247);
-    background-image: url("배경.jpg");
-    background-repeat: no-repeat;
-    background-size: 1400px 345px;
-    background-position-x: center;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 body{
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 0px;
+}
+
+#background{
+    background-color: rgb(255, 254, 247);
+    background-image: url("배경.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-position-x: center;
+}
+
+
+#content{
+    width: auto;
+    min-height: 100vh;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 
@@ -17,6 +33,10 @@ body{
 #top{
     display: grid;
     grid-template-columns: 1fr 3fr;
+}
+
+#iconBox{
+    text-align: center;
 }
 
 #icon{
@@ -32,7 +52,7 @@ body{
 
 /* 중간부분 */
 #middle{
-    box-sizing: border-box; 
+    height: fit-content; 
     display: grid;
     grid-template-columns: 1fr 3fr;
 }
@@ -93,96 +113,13 @@ body{
 
 
 
-@media (max-width:1200px) {
-
-    #top{
-        grid-template-columns: 1fr 2fr;
-    }
-
-    .left{
-        margin-left: 10px;
-    }
-
-
-    #r{
-        margin-right: 10px;
-    }
-
-    #one{
-        grid-template-columns: none;
-    }
-
-    #middle{
-        grid-template-columns: 1fr 2fr;
-    }
-
-    #first{
-        height: 338px;
-    }
-
-    #two-four{
-        grid-template-columns: none;
-    }
-
-    #five{
-        height: 250px;
-    }
-
-    #sixSeven{
-        grid-template-columns: none;
-    }
-
-    #six{
-        height: 400px
-    }
-
-    #name{
-        display: none;
-    }
-
-}
-
-@media (max-width: 1020px) {
-    .left{
-        margin-left: 60px;
-    }
-
-
-    #r{
-        margin-right: 60px;
-    }
-}
-
-
-@media (max-width:760px) {
-    #middle{
-        grid-template-columns: none;
-    }
-
-    .left{
-        display: none;
-    }
-
-    body{
-        margin: 0px;
-    }
-
-    #r{
-        margin: 0px;
-    }
-}
-
-
-
-
-
-
 /* 마지막부분 */
 #bottom{
-    box-sizing: border-box; 
-    height: 280px; 
-    background-color: gray;
+    width: 100%;
+    height: 270px; 
+    background-color: grey;
+    margin: 0px;
     margin-top: 50px;
+    background-size: cover;
+    background-position: center;
 }
-
-
